crates/viewer/dl_viewer/tests/snapshots/all_component_fallbacks__arch_fallback_rerun.archetypes.VideoFrameReference.snap
---
source: crates/viewer/dl_viewer/tests/all_component_fallbacks.rs
expression: arch_display
---
timestamp: [0]
video_reference: []
opacity: [1.0]
draw_order: [-15.0]
