crates/viewer/dl_viewer/tests/snapshots/all_component_fallbacks__arch_fallback_rerun.blueprint.archetypes.MapBackground.snap
---
source: crates/viewer/dl_viewer/tests/all_component_fallbacks.rs
expression: arch_display
---
provider: [1]
