crates/viewer/dl_viewer/tests/snapshots/all_component_fallbacks__arch_fallback_rerun.blueprint.archetypes.MapZoom.snap
---
source: crates/viewer/dl_viewer/tests/all_component_fallbacks.rs
expression: arch_display
---
zoom: [0.0]
